--- a/docs/Exercise/Entering/2023.md
+++ b/docs/Exercise/Entering/2023.md
@@ -22,14 +22,14 @@ $$\{(x,y)|x\in(a,b), \quad y\ge f(x)\},$$
 
 $$\dfrac{f(x_2)-f(x_1)}{x_2-x_1} \le \dfrac{f(x_3)-f(x_2)}{x_3-x_2}.$$
 
-（3）假设 $f$ 是 $(a,b)$ 上的函数，$x_0\in (a,b)$，一个一次函数 $y=kx+d$ 如果满足对任意 $x\in(a,b)$ 都有 $f(x)\ge kx+d$，并且 $f(x_0)=kx_0+d$，则称 $y=kx+d$ 是 $f$ 在 $x_0$ 处的一条“支撑直线”，试求出 $(-1,1)$ 上函数 $f(x)=|x|$ 在 $(-1,1)$ 每一点处的所有支撑直线；
+（3）假设 $f$ 是 $(a,b)$ 上的函数，$x_0\in (a,b)$，一个一次函数 $y=kx+d$ 如果满足对任意 $x\in(a,b)$ 都有 $f(x)\ge kx+d$，并且 $f(x_0)=kx_0+d$，则称 $y=kx+d$ 是 $f$ 在 $x_0$ 处的一条“支撑直线”，试求出 $(-1,1)$ 上函数 $f(x)=\vert x\vert$ 在 $(-1,1)$ 每一点处的所有支撑直线；
 
 （4）假设 $f$ 是 $(a,b)$ 上的函数，并且处处存在支撑直线，请证明：$f$ 是 $(a,b)$ 上的凸函数．
 
 
 ## 第二题
 
-(20分)考虑平面具有整数坐标格点构成的集合 $\mathbb{Z}^2=\{(m,n)|m,n\in\mathbb{Z}\}$，定义在 $\mathbb{Z}^2$ 上的函数 $f:\mathbb{Z}^2\to\mathbb{R}$ 满足如下条件：
+(20分)考虑平面具有整数坐标格点构成的集合 $\mathbb{Z}^2=\{(m,n)\vert m,n\in\mathbb{Z}\}$，定义在 $\mathbb{Z}^2$ 上的函数 $f:\mathbb{Z}^2\to\mathbb{R}$ 满足如下条件：
 
 $$f(m,n)=\dfrac{1}{4}\left[f(m+1,n)+f(m-1,n)+f(m,n+1)+f(m,n-1)\right]$$
 
@@ -39,7 +39,7 @@ $$f(m,n)=\dfrac{1}{4}\left[f(m+1,n)+f(m-1,n)+f(m,n+1)+f(m,n-1)\right]$$
 
 （2）假设 $f:\mathbb{Z}^2\to\mathbb{R}$ 是调和函数，并且存在一点 $(m_0,n_0)\in\mathbb{Z}^2$ 满足：对任意 $(m,n)\in\mathbb{Z}^2$ 都有 $f(m,n)\le f(m_0,n_0)$，请证明 $f$ 恒等于常数 $f(m_0,n_0)$；
 
-（3）假设 $f:\mathbb{Z}^2\to\mathbb{R}$ 是调和函数，并且存在正数 $M>0$，满足：对任意$(m,n)\in\mathbb{Z}^2$ 都有 $|f(m,n)|\le M$，请证明 $f$ 恒等于一个常数．
+（3）假设 $f:\mathbb{Z}^2\to\mathbb{R}$ 是调和函数，并且存在正数 $M>0$，满足：对任意$(m,n)\in\mathbb{Z}^2$ 都有 $\vert f(m,n)\vert\le M$，请证明 $f$ 恒等于一个常数．
 
 ## 第三题
 
@@ -53,7 +53,7 @@ $$f(m,n)=\dfrac{1}{4}\left[f(m+1,n)+f(m-1,n)+f(m,n+1)+f(m,n-1)\right]$$
 
 $$\Phi_n(x)=\prod_{\zeta\in T_n}(x-\zeta).$$
 
-求 $|T_{10}|$ 和 $\Phi_{15}(x)$．
+求 $\vert T_{10}\vert$ 和 $\Phi_{15}(x)$．
 
 ## 第四题
 
