--- a/docs/Exercise/Entering/2023.md
+++ b/docs/Exercise/Entering/2023.md
@@ -8,9 +8,9 @@ nav_order: 1
 
 # 2023年NJU数拔二次选拔考试题
 
-## 第一题
+## 第一题（30分）
 
-(30分) 一个平面的子集 $G\subset \mathbb{R}^2$ 如果满足：对任意两点 $P,Q\in G$，连接 $P,Q$ 的直线段 $\overline{PQ}$ 上的点都在 $G$ 中，则称 $G$ 是一个“凸集”．开区间 $(a,b)$ 上的函数 $f:(a,b)\to\mathbb{R}$ 如果满足
+一个平面的子集 $G\subset \mathbb{R}^2$ 如果满足：对任意两点 $P,Q\in G$，连接 $P,Q$ 的直线段 $\overline{PQ}$ 上的点都在 $G$ 中，则称 $G$ 是一个“凸集”．开区间 $(a,b)$ 上的函数 $f:(a,b)\to\mathbb{R}$ 如果满足
 
 $$\{(x,y)|x\in(a,b), \quad y\ge f(x)\},$$
 
@@ -26,10 +26,12 @@ $$\dfrac{f(x_2)-f(x_1)}{x_2-x_1} \le \dfrac{f(x_3)-f(x_2)}{x_3-x_2}.$$
 
 （4）假设 $f$ 是 $(a,b)$ 上的函数，并且处处存在支撑直线，请证明：$f$ 是 $(a,b)$ 上的凸函数．
 
+\newpage
 
-## 第二题
 
-(20分)考虑平面具有整数坐标格点构成的集合 $\mathbb{Z}^2=\{(m,n)\vert m,n\in\mathbb{Z}\}$，定义在 $\mathbb{Z}^2$ 上的函数 $f:\mathbb{Z}^2\to\mathbb{R}$ 满足如下条件：
+## 第二题（20分）
+
+考虑平面具有整数坐标格点构成的集合 $\mathbb{Z}^2=\{(m,n)\vert m,n\in\mathbb{Z}\}$，定义在 $\mathbb{Z}^2$ 上的函数 $f:\mathbb{Z}^2\to\mathbb{R}$ 满足如下条件：
 
 $$f(m,n)=\dfrac{1}{4}\left[f(m+1,n)+f(m-1,n)+f(m,n+1)+f(m,n-1)\right]$$
 
@@ -41,7 +43,11 @@ $$f(m,n)=\dfrac{1}{4}\left[f(m+1,n)+f(m-1,n)+f(m,n+1)+f(m,n-1)\right]$$
 
 （3）假设 $f:\mathbb{Z}^2\to\mathbb{R}$ 是调和函数，并且存在正数 $M>0$，满足：对任意$(m,n)\in\mathbb{Z}^2$ 都有 $\vert f(m,n)\vert\le M$，请证明 $f$ 恒等于一个常数．
 
-## 第三题
+
+\newpage
+
+
+## 第三题（15分）
 
 **定义：** 设 $n$ 是正整数．
 
@@ -55,7 +61,9 @@ $$\Phi_n(x)=\prod_{\zeta\in T_n}(x-\zeta).$$
 
 求 $\vert T_{10}\vert$ 和 $\Phi_{15}(x)$．
 
-## 第四题
+\newpage
+
+## 第四题（35分）
 
 设 $f(x)=\sum\limits_{i=0}^na_ix^i$，$a_i\in\mathbb{R}$，$i=0,1,\cdots,n$．如果 $a_n\ne 0$，则称 $f(x)$ 是 $n$ 次实系数多项式，并且 $a_n$ 称为 $f(x)$ 的首项系数．如果 $a_0,a_1,\cdots,a_n$ 都是整数，则称 $f(x)$ 是整系数多项式．
 
