--- a/docs/Exercise/Entering/2023.md
+++ b/docs/Exercise/Entering/2023.md
@@ -26,7 +26,7 @@ $$\dfrac{f(x_2)-f(x_1)}{x_2-x_1} \le \dfrac{f(x_3)-f(x_2)}{x_3-x_2}.$$
 
 （4）假设 $f$ 是 $(a,b)$ 上的函数，并且处处存在支撑直线，请证明：$f$ 是 $(a,b)$ 上的凸函数．
 
-\newpage
+<div STYLE="page-break-after: always;"></div>
 
 
 ## 第二题（20分）
@@ -44,7 +44,7 @@ $$f(m,n)=\dfrac{1}{4}\left[f(m+1,n)+f(m-1,n)+f(m,n+1)+f(m,n-1)\right]$$
 （3）假设 $f:\mathbb{Z}^2\to\mathbb{R}$ 是调和函数，并且存在正数 $M>0$，满足：对任意$(m,n)\in\mathbb{Z}^2$ 都有 $\vert f(m,n)\vert\le M$，请证明 $f$ 恒等于一个常数．
 
 
-\newpage
+<div STYLE="page-break-after: always;"></div>
 
 
 ## 第三题（15分）
@@ -61,7 +61,10 @@ $$\Phi_n(x)=\prod_{\zeta\in T_n}(x-\zeta).$$
 
 求 $\vert T_{10}\vert$ 和 $\Phi_{15}(x)$．
 
-\newpage
+
+
+
+<div STYLE="page-break-after: always;"></div>
 
 ## 第四题（35分）
 
