--- a/docs/Exercise/Entering/2023.md
+++ b/docs/Exercise/Entering/2023.md
@@ -3,7 +3,8 @@ layout: default
 title: 2023年
 parent: 入学考试(NJU)
 grand_parent: 习题
-nav_order: 1
+nav_order: 2023
+nav_exclude: true
 ---
 
 # 2023年NJU数拔二次选拔考试题
