--- a/docs/Exercise/Entering/2022.md
+++ b/docs/Exercise/Entering/2022.md
@@ -9,7 +9,7 @@ nav_exclude: true
 
 # 2022年NJU数拔二次选拔考试题
 
-## 第一题（25分）
+## 2022年第一题（25分）
 
 设 $\ell$ 是平面 $\mathbb{R}^2$ 上的直线, 它将平面分为两部分, 分别记为 $\ell^+$ 和$\ell^-$．
 
@@ -20,7 +20,7 @@ nav_exclude: true
 <div STYLE="page-break-after: always;"></div>
 
 
-## 第二题（25分）
+## 2022年第二题（25分）
 
 当 $x$ 为实数时，不超过 $x$ 的最大整数称为 $x$ 的整数部分．
 
@@ -32,7 +32,7 @@ nav_exclude: true
 <div STYLE="page-break-after: always;"></div>
 
 
-## 第三题（20分）
+## 2022年第三题（20分）
 
 设 $f(x)=x^3+ax+b$ 的三个复根为 $\alpha,\beta,\gamma$．定义
 
@@ -46,7 +46,7 @@ $$d(f)=(\alpha-\beta)^2(\alpha-\gamma)^2(\beta-\gamma)^2.$$
 
 <div STYLE="page-break-after: always;"></div>
 
-## 第四题（30分）
+## 2022年第四题（30分）
 
 
 设 $S$ 是一个非空集合，$f:S\to S$ 是一个映射．
