--- a/docs/Exercise/Entering/2017.md
+++ b/docs/Exercise/Entering/2017.md
@@ -9,21 +9,21 @@ nav_exclude: true
 
 # 2017年NJU数拔二次选拔考试题
 
-## 第一题 
+## 2017年第一题 
 
 寻找一整系数多项式 $g(x)\neq 0$，使得 $g\left(\dfrac{\sqrt{3}+\sqrt{2}}{\sqrt{3}-\sqrt{2}}\right)=0$．
 
 <div STYLE="page-break-after: always;"></div>
 
 
-## 第二题 
+## 2017年第二题 
 
 已知函数 $f:\mathbb{Z}^+\to \mathbb{Z}^+$ 是单调非减函数，对任意两互素正整数 $m,n$，均满足 $f(mn)=f(m)f(n)$．试比较 $f(2)f(8)$ 和 $f(3)f(5)$ 的大小．
 
 <div STYLE="page-break-after: always;"></div>
 
 
-## 第三题 
+## 2017年第三题 
 
 设 $A\subseteq\mathbb{R}$，$ \overline{A}=\complement_{\mathbb{R}}A$，
 $\Phi=\lbrace \overline{A}\vert A\text{是有限集}\rbrace \cup \lbrace \varnothing,\mathbb{R}\rbrace $，$T\subseteq\mathbb{R}$．
@@ -38,23 +38,23 @@ $\Phi=\lbrace \overline{A}\vert A\text{是有限集}\rbrace \cup \lbrace \varnot
 
 <div STYLE="page-break-after: always;"></div>
 
-## 第四题 
+## 2017年第四题 
 
 
 定义 $\mathbb{R}^{\infty}=\lbrace (a_1,a_2,\cdots,a_k,\cdots)
 \vert \forall i\in \mathbb{N}^*,a_i\in\mathbb{R}\rbrace $．
 
-设$\bm{a}\in\mathbb{R}^{\infty}$，$\bm{b}\in\mathbb{R}^{\infty}$，则
+设$\boldsymbol{a}\in\mathbb{R}^{\infty}$，$\boldsymbol{b}\in\mathbb{R}^{\infty}$，则
  
-$$\bm{a}=(a_1,a_2,\cdots,a_k,\cdots),\bm{b}=(b_1,b_2,\cdots,b_k,\cdots).$$
+$$\boldsymbol{a}=(a_1,a_2,\cdots,a_k,\cdots),\boldsymbol{b}=(b_1,b_2,\cdots,b_k,\cdots).$$
 
 定义 
 
-$$\bm{a}\ast \bm{b}=(c_1,c_2,\cdots,c_k,\cdots),c_n=\sum\limits_{n=kl}a_kb_l.$$
+$$\boldsymbol{a}\ast \boldsymbol{b}=(c_1,c_2,\cdots,c_k,\cdots),c_n=\sum\limits_{n=kl}a_kb_l.$$
 
 例如：若 $n=6$，则$c_6=a_1b_6+a_2b_3+a_3b_2+a_6b_1$．
 
-现在令 $\bm{a}=(1,1,\cdots,1,\cdots)$．求 $\bm{b}$ 使得 $\bm{a}\ast\bm{b}=$
+现在令 $\boldsymbol{a}=(1,1,\cdots,1,\cdots)$．求 $\boldsymbol{b}$ 使得 $\boldsymbol{a}\ast\boldsymbol{b}=$
 
 （1）$(1,0,0,\cdots,0,\cdots)$； 
 
