--- a/docs/Exercise/Entering/2020.md
+++ b/docs/Exercise/Entering/2020.md
@@ -1,13 +1,17 @@
 ---
 layout: default
-title: 2021年
+title: 2020年
 parent: 入学考试(NJU)
 grand_parent: 习题
-nav_order: 2021
+nav_order: 2020
 nav_exclude: true
 ---
 
 # 2020年NJU数拔二次选拔考试题
+
+根据南京大学教务网通知，2020年9月9日晚上18:30-20:30举行了南京大学数学拔尖二次选拔的考试（笔试）。
+
+笔试考试内容：根据给出的相关新概念、新知识点提出相应的需要解决的问题。主要考察学生的学习能力和分析问题、解决问题的能力。考试科目为数学，时长2小时，闭卷考试，采用百分制。根据笔试成绩按照实际招生人数1:1.3进入复试。
 
 ## 2020年第一题 
 
@@ -20,7 +24,8 @@ $$(z_1,z_2)\mapsto \dfrac{\vert z_1-z_2\vert }{\sqrt{\vert z_1\vert ^2+1}\sqrt{\
 （2）证明： $\rho(z_1,z_3)\leq \rho(z_1,z_2)+\rho(z_2,z_3)$，$\forall z_1,z_2,z_3\in\mathbb{C}$；
 
 （3）设 $\alpha,\beta\in\mathbb{C}$ 满足 $\vert \alpha\vert ^2+\vert \beta\vert ^2=1$，函数 $f(z)=\dfrac{\alpha z-\overline{\beta}}{\beta z+\overline{\alpha}}$．
-求证： $\rho(f(z_1),f(z_2))=\rho(z_1,z_2)$．
+
+证明： $\rho(f(z_1),f(z_2))=\rho(z_1,z_2)$．
 
 （4）设 $f(z)=\dfrac{2z+1}{z+1}$，求满足
 
@@ -74,16 +79,68 @@ $$f(x)g(x)=x^{m+n}+c_{m+n-1}x^{m+n-1}+\cdots+c_1x+c_0$$
 
 满足 $c_0,c_1,\cdots,c_{m+n-1}\in\mathbb{Z}$，求证：$a_0,a_1\cdots,a_{m-1},b_0,b_1,\cdots,b_{n-1}\in\mathbb{Z}$． 
 
-**注：** 取 $p,q\in\mathbb{Z}$ 使得 $pf(x)$，$qg(x)$ 都是本原多项式 (即各项系数的最大公因数是 $\pm 1$ 的整系数多项式)，则 $pqf(x)g(x)$ 也是本原多项式（Gauss引理，两个本原多项式的乘积也是本原的．可以看丘维声《高等代数》）
-
+**Fiddie注：** 取 $p,q\in\mathbb{Z}$ 使得 $pf(x)$，$qg(x)$ 都是本原多项式 (即各项系数的最大公因数是 $\pm 1$ 的整系数多项式)，则 $pqf(x)g(x)$ 也是本原多项式（Gauss引理，两个本原多项式的乘积也是本原的．可以看丘维声《高等代数》）
 由于 $f(x)g(x)$ 是整系数的，所以必有 $pq=1$，所以 $f(x),g(x)$ 都是整系数多项式．
 
 <div STYLE="page-break-after: always;"></div>
 
-## 2021年第四题 
+## 2020年第四题 
 
 取 $1,2,\cdots,1100$ 中能被 11 整除或能被 100 整除的数(一共有 110 个)，从小到大排列如下：
 
 $$a_1=11,\quad a_2=22,\quad \cdots,\quad a_{110}=1100.$$
 
 计算：$\sum\limits_{i=1}^{110}(-1)^ia_i$．
+
+<div STYLE="page-break-after: always;"></div>
+
+
+
+# 2020年NJU数学新生摸底测试题
+
+根据各专业教学计划要求，不同专业对数学基础知识要求不一，其中*层次（最高层次）需学习《数学分析》、《高等代数》、《解析几何》系列课程（即数学系相关专业通修课程）。新生入学后，学校将组织数学基础摸底测试，根据测试成绩，确定一年级学生选修《数学分析》、《高等代数》、《解析几何》课程的资格．
+
+2020年9月11日晚上举行了这次考试，主要内容还是数分高代的一些基础内容，题目不算特别难，如果高考是靠刷题刷上来的，而没怎么深入思考过，那么做起来可能会比较吃力．
+
+
+## 2020年摸底第一题（40分）
+
+设 $X$ 为非空集合，函数 $d:X\times X\to\mathbb{R}$，当 $d$ 满足下列条件时称 $d$ 为 $X$ 的度量：
+- （ⅰ）$\forall x,y\in X$，$d(x,y)\geq 0$，当且仅当 $x=y$ 时等号成立．
+- （ⅱ）$\forall x,y\in X$，$d(x,y)=d(y,x)$．
+- （ⅲ）$\forall x,y,z\in X$，$d(x,z)\leq d(x,y)+d(y,z)$．
+
+回答下列问题：
+
+（1）若 $X=[0,\pi)$，$d(x,y)=|\sin(x-y)|$，求证：$d$ 为 $X$ 的度量．
+
+（2）若 $\mathbb{R}^n=\{(x_1,x_2,\cdots,x_n)|x_i\in\mathbb{R}\}$，$n\in\mathbb{N}$，且对 $P=(x_1,x_2,\cdots,x_n)$，$Q=(y_1,y_2,\cdots,y_n)\in\mathbb{R}^n$，定义 $d(P,Q)=\max\limits_{1\leq i\leq n}|x_i-y_i|$．证明：$d$ 为 $\mathbb{R}^n$ 的度量．
+
+（3）求证：任意非空集合都存在度量．
+
+<div STYLE="page-break-after: always;"></div>
+
+
+## 2020年摸底第二题（40分）
+
+
+设 $f(x)=x^n+a_{n-1}x^{n-1}+\cdots+a_1x+a_0$．把 $f(x)=0$ 在复数域上的根分别记为$\alpha_1,\alpha_2,\cdots,\alpha_n$．记 $d(f)=\prod\limits_{1\leq i<j\leq n}|\alpha_i-\alpha_j|^2$．
+
+（1）若 $f(x)=x^3+ax+b$，$a,b\in\mathbb{Z}$，求 $d(f)$．
+
+（2）若 $f(x)=x^4+a$，$a\in\mathbb{Z}$，其中 $\sqrt[4]{-a}\notin \mathbb{Z}$，求$d(f)$．
+
+
+<div STYLE="page-break-after: always;"></div>
+
+
+## 2020年摸底第三题（20分）
+
+求大于 2020 的最小正整数 $n$，使得
+
+$$(x^6+x^4)^n-x^{4n}-x^6=(x^4+x^2+1)g(x),$$
+
+且 $g(x)$ 为整系数多项式．
+
+
+
