--- a/docs/Exercise/Entering/2021.md
+++ b/docs/Exercise/Entering/2021.md
@@ -9,6 +9,10 @@ nav_exclude: true
 
 # 2021年NJU数拔二次选拔考试题
 
+本卷考试时间：120分钟，满分：100分。
+
+考试内容：结合新知识求解问题，只需要利用高中所学过的知识就能解答大部分题目，但可能需要补充复数、数学归纳法等知识．
+
 ## 2021年第一题（20分）
 
 设 $f$ 是定义在整数集 $\mathbb{Z}$ 上的函数．
