--- a/docs/Exercise/Entering/2022.md
+++ b/docs/Exercise/Entering/2022.md
@@ -9,6 +9,10 @@ nav_exclude: true
 
 # 2022年NJU数拔二次选拔考试题
 
+考试日期：2022年8月26日，满分100分，考试时间：120分钟。
+
+考察范围：根据给出的相关新概念、新知识点提出相应的需要解决的问题，主要考察学生的学习能力和分析问题、解决问题的能力．
+
 ## 2022年第一题（25分）
 
 设 $\ell$ 是平面 $\mathbb{R}^2$ 上的直线, 它将平面分为两部分, 分别记为 $\ell^+$ 和$\ell^-$．
