--- a/docs/Exercise/Entering/2023.md
+++ b/docs/Exercise/Entering/2023.md
@@ -9,6 +9,8 @@ nav_exclude: true
 
 # 2023年NJU数拔二次选拔考试题
 
+笔试科目为数学，时长2 小时，闭卷考试，采用百分制。笔试中将根据给出的相关新概念、新知识点提出相应的需要解决的问题，主要考察学生的学习能力和分析问题、解决问题的能力。根据笔试成绩按照实际招生人数1:1.5 进入复试。
+
 ## 2023年第一题（30分）
 
 一个平面的子集 $G\subset \mathbb{R}^2$ 如果满足：对任意两点 $P,Q\in G$，连接 $P,Q$ 的直线段 $\overline{PQ}$ 上的点都在 $G$ 中，则称 $G$ 是一个“凸集”．开区间 $(a,b)$ 上的函数 $f:(a,b)\to\mathbb{R}$ 如果满足
