--- a/docs/Exercise/Entering/2019.md
+++ b/docs/Exercise/Entering/2019.md
@@ -24,7 +24,7 @@ nav_exclude: true
 
 （1）证明：方程 $f(x)=0$ 有且仅有一个正实数根 $\beta$，且 $\beta>1$．
 
-（2）证明：方程 $f(x)=0$ 的任意复数根 $\alpha$ 满足对(1)中 $\beta$ 有 $|\alpha|\leq\beta$．
+（2）证明：方程 $f(x)=0$ 的任意复数根 $\alpha$ 满足对(1)中 $\beta$ 有 $\vert \alpha\vert \leq\beta$．
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -45,7 +45,7 @@ nav_exclude: true
 
 ## 2019年第五题
 
-证明：$\{(x,y)|x^2-2y^2=0,x,y\in\mathbb{C}, \mathrm{Re} x,\mathrm{Re} y,\mathrm{Im} x,\mathrm{Im} y\in\mathbb{Q}\}=\{(0,0)\}$．
+证明：$\{(x,y)\vert x^2-2y^2=0,x,y\in\mathbb{C}, \mathrm{Re} x,\mathrm{Re} y,\mathrm{Im} x,\mathrm{Im} y\in\mathbb{Q}\}=\{(0,0)\}$．
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -60,17 +60,17 @@ nav_exclude: true
 
 ## 2019年第七题
 
-设 $p$ 是个素数，对任意 $x\in\mathbb{Q}$，我们定义 $|x|_p$ 如下：
+设 $p$ 是个素数，对任意 $x\in\mathbb{Q}$，我们定义 $\vert x\vert _p$ 如下：
 
-$$|x|_p=\left\{ \begin{aligned} &0, &&x=0, \\
+$$\vert x\vert _p=\left\{ \begin{aligned} &0, &&x=0, \\
 &p^{-\alpha},&&x=p^{\alpha}\cdot\dfrac{n}{m},\alpha\in\mathbb{Z},
 m,n\in\mathbb{Z},(p,mn)=1, x\neq 0. \end{aligned} \right.$$
 
 定义数列 $\{a_n\}\subset\mathbb{Q}$，$n=1,2,\cdots$．
 
-（ⅰ）我们称数列 $\{a_n\}_{n=1}^{\infty}$ 是 $p$-柯西列, 如果对任意 $\varepsilon>0$，都存在 $N>0$，使得 $\forall m,n>N$ 都有 $|a_m-a_n|_p<\varepsilon$．
+（ⅰ）我们称数列 $\{a_n\}_{n=1}^{\infty}$ 是 $p$-柯西列, 如果对任意 $\varepsilon>0$，都存在 $N>0$，使得 $\forall m,n>N$ 都有 $\vert a_m-a_n\vert _p<\varepsilon$．
 
-（ⅱ）如果存在 $A\in\mathbb{Q}$，使得对任意 $\varepsilon>0$, 都存在 $N>0$，使得对 $\forall n>N$ 都有 $|A-a_n|_p<\varepsilon$，则称数列 $\{a_n\}_{n=1}^{\infty}$ 是$p$-收敛于 $A$．
+（ⅱ）如果存在 $A\in\mathbb{Q}$，使得对任意 $\varepsilon>0$, 都存在 $N>0$，使得对 $\forall n>N$ 都有 $\vert A-a_n\vert _p<\varepsilon$，则称数列 $\{a_n\}_{n=1}^{\infty}$ 是$p$-收敛于 $A$．
 
 证明：
 
