--- a/docs/Exercise/Entering/2020.md
+++ b/docs/Exercise/Entering/2020.md
@@ -112,9 +112,9 @@ $$a_1=11,\quad a_2=22,\quad \cdots,\quad a_{110}=1100.$$
 
 回答下列问题：
 
-（1）若 $X=[0,\pi)$，$d(x,y)=|\sin(x-y)|$，求证：$d$ 为 $X$ 的度量．
+（1）若 $X=[0,\pi)$，$d(x,y)=\vert \sin(x-y)\vert $，求证：$d$ 为 $X$ 的度量．
 
-（2）若 $\mathbb{R}^n=\{(x_1,x_2,\cdots,x_n)|x_i\in\mathbb{R}\}$，$n\in\mathbb{N}$，且对 $P=(x_1,x_2,\cdots,x_n)$，$Q=(y_1,y_2,\cdots,y_n)\in\mathbb{R}^n$，定义 $d(P,Q)=\max\limits_{1\leq i\leq n}|x_i-y_i|$．证明：$d$ 为 $\mathbb{R}^n$ 的度量．
+（2）若 $\mathbb{R}^n=\{(x_1,x_2,\cdots,x_n)\vert x_i\in\mathbb{R}\}$，$n\in\mathbb{N}$，且对 $P=(x_1,x_2,\cdots,x_n)$，$Q=(y_1,y_2,\cdots,y_n)\in\mathbb{R}^n$，定义 $d(P,Q)=\max\limits_{1\leq i\leq n}\vert x_i-y_i\vert $．证明：$d$ 为 $\mathbb{R}^n$ 的度量．
 
 （3）求证：任意非空集合都存在度量．
 
@@ -124,7 +124,7 @@ $$a_1=11,\quad a_2=22,\quad \cdots,\quad a_{110}=1100.$$
 ## 2020年摸底第二题（40分）
 
 
-设 $f(x)=x^n+a_{n-1}x^{n-1}+\cdots+a_1x+a_0$．把 $f(x)=0$ 在复数域上的根分别记为$\alpha_1,\alpha_2,\cdots,\alpha_n$．记 $d(f)=\prod\limits_{1\leq i<j\leq n}|\alpha_i-\alpha_j|^2$．
+设 $f(x)=x^n+a_{n-1}x^{n-1}+\cdots+a_1x+a_0$．把 $f(x)=0$ 在复数域上的根分别记为$\alpha_1,\alpha_2,\cdots,\alpha_n$．记 $d(f)=\prod\limits_{1\leq i<j\leq n}\vert \alpha_i-\alpha_j\vert ^2$．
 
 （1）若 $f(x)=x^3+ax+b$，$a,b\in\mathbb{Z}$，求 $d(f)$．
 
