--- a/docs/Exercise/Entering/2019.md
+++ b/docs/Exercise/Entering/2019.md
@@ -60,7 +60,7 @@ nav_exclude: true
 
 ## 2019年第七题
 
-设 $p$ 是个素数，对任意 $x\in\mathbb{Q}$，我们定义 $\vert x\vert _p$ 如下：
+设 $p$ 是个素数，对任意 $x\in\mathbb{Q}$，我们定义 $\vert x\vert_p$ 如下：
 
 $$\vert x\vert _p=\left\{ \begin{aligned} &0, &&x=0, \\
 &p^{-\alpha},&&x=p^{\alpha}\cdot\dfrac{n}{m},\alpha\in\mathbb{Z},
@@ -68,17 +68,17 @@ m,n\in\mathbb{Z},(p,mn)=1, x\neq 0. \end{aligned} \right.$$
 
 定义数列 $\{a_n\}\subset\mathbb{Q}$，$n=1,2,\cdots$．
 
-（ⅰ）我们称数列 $\{a_n\}_{n=1}^{\infty}$ 是 $p$-柯西列, 如果对任意 $\varepsilon>0$，都存在 $N>0$，使得 $\forall m,n>N$ 都有 $\vert a_m-a_n\vert _p<\varepsilon$．
+（ⅰ）我们称数列 $\{a_n\}_{n=1}^{\infty}$ 是 $p$-柯西列, 如果对任意 $\varepsilon>0$，都存在 $N>0$，使得 $\forall m,n>N$ 都有 $\vert a_m-a_n\vert_p<\varepsilon$．
 
-（ⅱ）如果存在 $A\in\mathbb{Q}$，使得对任意 $\varepsilon>0$, 都存在 $N>0$，使得对 $\forall n>N$ 都有 $\vert A-a_n\vert _p<\varepsilon$，则称数列 $\{a_n\}_{n=1}^{\infty}$ 是$p$-收敛于 $A$．
+（ⅱ）如果存在 $A\in\mathbb{Q}$，使得对任意 $\varepsilon>0$, 都存在 $N>0$，使得 $\forall n>N$ 都有 $\vert A-a_n\vert_p<\varepsilon$，则称数列 $\lbrace a_n\rbrace_{n=1}^{\infty}$ 是 $p$-收敛于 $A$．
 
 证明：
 
-(a) 如果数列 $\{a_n\}_{n=1}^{\infty}$ 是 $p$-收敛于 $A$，则数列$\{a_n\}_{n=1}^{\infty}$ 是 $p$-柯西列．
+(a) 如果数列 $\lbrace a_n\rbrace_{n=1}^{\infty}$ 是 $p$-收敛于 $A$，则数列 $\lbrace a_n\rbrace_{n=1}^{\infty}$ 是 $p$-柯西列．
 
-(b) 数列 $\{a_n\}_{n=1}^{\infty}$ 是 $p$-柯西列当且仅当数列 $\{a_{n+1}-a_n\}_{n=1}^{\infty}$ 是 $p$-收敛于0．
+(b) 数列 $\lbrace a_n\rbrace_{n=1}^{\infty}$ 是 $p$-柯西列当且仅当数列 $\lbrace a_{n+1}-a_n\rbrace_{n=1}^{\infty}$ 是 $p$-收敛于0．
 
-(c) 存在 $p$-柯西列 $\{a_n\}_{n=1}^{\infty}$ 满足：对任意 $A\in\mathbb{Q}$，数列 $\{a_n\}_{n=1}^{\infty}$ 都不 $p$-收敛于 $A$．
+(c) 存在 $p$-柯西列 $\lbrace a_n\rbrace_{n=1}^{\infty}$ 满足：对任意 $A\in\mathbb{Q}$，数列 $\lbrace a_n\rbrace_{n=1}^{\infty}$ 都不 $p$-收敛于 $A$．
 
 
 <div STYLE="page-break-after: always;"></div>
