--- a/docs/Exercise/Entering/2019.md
+++ b/docs/Exercise/Entering/2019.md
@@ -45,7 +45,7 @@ nav_exclude: true
 
 ## 2019年第五题
 
-证明：$\{(x,y)\vert x^2-2y^2=0,x,y\in\mathbb{C}, \mathrm{Re} x,\mathrm{Re} y,\mathrm{Im} x,\mathrm{Im} y\in\mathbb{Q}\}=\{(0,0)\}$．
+证明：$\lbrace (x,y)\vert x^2-2y^2=0,x,y\in\mathbb{C}, \mathrm{Re} x,\mathrm{Re} y,\mathrm{Im} x,\mathrm{Im} y\in\mathbb{Q}\rbrace=\lbrace(0,0)\rbrace$．
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -62,13 +62,13 @@ nav_exclude: true
 
 设 $p$ 是个素数，对任意 $x\in\mathbb{Q}$，我们定义 $\vert x\vert_p$ 如下：
 
-$$\vert x\vert _p=\left\{ \begin{aligned} &0, &&x=0, \\
+$$\vert x\vert _p=\left\lbrace \begin{aligned} &0, &&x=0, \\
 &p^{-\alpha},&&x=p^{\alpha}\cdot\dfrac{n}{m},\alpha\in\mathbb{Z},
 m,n\in\mathbb{Z},(p,mn)=1, x\neq 0. \end{aligned} \right.$$
 
-定义数列 $\{a_n\}\subset\mathbb{Q}$，$n=1,2,\cdots$．
+定义数列 $\lbrace a_n\rbrace\subset\mathbb{Q}$，$n=1,2,\cdots$．
 
-（ⅰ）我们称数列 $\{a_n\}_{n=1}^{\infty}$ 是 $p$-柯西列, 如果对任意 $\varepsilon>0$，都存在 $N>0$，使得 $\forall m,n>N$ 都有 $\vert a_m-a_n\vert_p<\varepsilon$．
+（ⅰ）我们称数列 $\lbrace a_n\rbrace_{n=1}^{\infty}$ 是 $p$-柯西列, 如果对任意 $\varepsilon>0$，都存在 $N>0$，使得 $\forall m,n>N$ 都有 $\vert a_m-a_n\vert_p<\varepsilon$．
 
 （ⅱ）如果存在 $A\in\mathbb{Q}$，使得对任意 $\varepsilon>0$, 都存在 $N>0$，使得 $\forall n>N$ 都有 $\vert A-a_n\vert_p<\varepsilon$，则称数列 $\lbrace a_n\rbrace_{n=1}^{\infty}$ 是 $p$-收敛于 $A$．
 
