--- a/docs/Exercise/Entering/2020.md
+++ b/docs/Exercise/Entering/2020.md
@@ -114,7 +114,7 @@ $$a_1=11,\quad a_2=22,\quad \cdots,\quad a_{110}=1100.$$
 
 （1）若 $X=[0,\pi)$，$d(x,y)=\vert \sin(x-y)\vert $，求证：$d$ 为 $X$ 的度量．
 
-（2）若 $\mathbb{R}^n=\{(x_1,x_2,\cdots,x_n)\vert x_i\in\mathbb{R}\}$，$n\in\mathbb{N}$，且对 $P=(x_1,x_2,\cdots,x_n)$，$Q=(y_1,y_2,\cdots,y_n)\in\mathbb{R}^n$，定义 $d(P,Q)=\max\limits_{1\leq i\leq n}\vert x_i-y_i\vert $．证明：$d$ 为 $\mathbb{R}^n$ 的度量．
+（2）若 $\mathbb{R}^n=\lbrace(x_1,x_2,\cdots,x_n)\vert x_i\in\mathbb{R}\rbrace$，$n\in\mathbb{N}$，且对 $P=(x_1,x_2,\cdots,x_n)$，$Q=(y_1,y_2,\cdots,y_n)\in\mathbb{R}^n$，定义 $d(P,Q)=\max\limits_{1\leq i\leq n}\vert x_i-y_i\vert $．证明：$d$ 为 $\mathbb{R}^n$ 的度量．
 
 （3）求证：任意非空集合都存在度量．
 
