--- a/docs/Exercise/Entering/2018Math.md
+++ b/docs/Exercise/Entering/2018Math.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 2018年
+title: 2018数学
 parent: 入学考试(NJU)
 grand_parent: 习题
-nav_order: 2018
+nav_order: 201801
 ---
 
 # 2018年NJU数拔二次选拔考试题
