--- a/docs/Exercise/Entering/2019Math.md
+++ b/docs/Exercise/Entering/2019Math.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 2019年
+title: 2019数学
 parent: 入学考试(NJU)
 grand_parent: 习题
-nav_order: 2019
+nav_order: 201901
 ---
 
 # 2019年NJU新生数学摸底测试
