--- a/docs/Exercise/Entering/2020Math.md
+++ b/docs/Exercise/Entering/2020Math.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 2020年
+title: 2020数学
 parent: 入学考试(NJU)
 grand_parent: 习题
-nav_order: 2020
+nav_order: 202001
 ---
 
 # 2020年NJU数拔二次选拔考试题
