--- a/docs/Exercise/Entering/2023Math.md
+++ b/docs/Exercise/Entering/2023Math.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 2023年
+title: 2023数学
 parent: 入学考试(NJU)
 grand_parent: 习题
-nav_order: 2023
+nav_order: 202301
 ---
 
 # 2023年NJU数拔二次选拔考试题
