--- a/docs/Exercise/Entering/2017Math.md
+++ b/docs/Exercise/Entering/2017Math.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 2017年
+title: 2017数学
 parent: 入学考试(NJU)
 grand_parent: 习题
-nav_order: 2017
+nav_order: 201701
 ---
 
 # 2017年NJU数拔二次选拔考试题
