--- a/docs/Exercise/Entering/2021Math.md
+++ b/docs/Exercise/Entering/2021Math.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 2021年
+title: 2021数学
 parent: 入学考试(NJU)
 grand_parent: 习题
-nav_order: 2021
+nav_order: 202101
 ---
 
 # 2021年NJU数拔二次选拔考试题
