--- a/docs/Exercise/Entering/2022Math.md
+++ b/docs/Exercise/Entering/2022Math.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: 2022年
+title: 2022数学
 parent: 入学考试(NJU)
 grand_parent: 习题
-nav_order: 2022
+nav_order: 202201
 ---
 
 # 2022年NJU数拔二次选拔考试题
