--- a/docs/ExerciseHidden/Entering/2024KYM.md
+++ b/docs/ExerciseHidden/Entering/2024KYM.md
@@ -44,7 +44,7 @@ nav_order: 202403
 
 ## 五、（10分）
 
-若实数$x,y$满足$(\sqrt{4x^2+1}+2x)(\sqrt{y^2+4}-2)\ge y > 0$，求$x+y$的最小值．
+若实数$x,y$满足$(\sqrt{4x^2+1}+2x)(\sqrt{y^2+4}-2)\ge y > 0$，求 $x+y$ 的最小值．
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -56,11 +56,11 @@ nav_order: 202403
 
 ## 七、（15分）
 
-数列 $\{a_n\}$ 的前 $n$ 项和为 $S_n$．已知 $a_1=1$，$2S_n=a_na_{n+1}$（$n\in\mathbf{N}^*$）． 
+数列 $\lbrace a_n\rbrace$ 的前 $n$ 项和为 $S_n$．已知 $a_1=1$，$2S_n=a_na_{n+1}$（$n\in\mathbf{N}^*$）． 
 
-（1）证明：$a_n\ne 0$（$n\in\mathbf{N}^*$），并求 $\{a_n\}$ 的通项公式；
+（1）证明：$a_n\ne 0$（$n\in\mathbf{N}^*$），并求 $\lbrace a_n\rbrace$ 的通项公式；
 
-（2）定义数列 $\{b_n\}$ 如下：$b_1=1$，$b_n=\sum\limits_{k=1}^n(-1)^{k-1}\dfrac{\mathrm{C}_{n-1}^{k-1}}{a_k}$（$n\ge 2$）．证明：对任意正整数 $M$，总有正整数 $N$ 满足 $\displaystyle\sum\limits_{k=1}^Nb_k > M$．
+（2）定义数列 $\lbrace b_n\rbrace$ 如下：$b_1=1$，$b_n=\sum\limits_{k=1}^n(-1)^{k-1}\dfrac{\mathrm{C}^{k-1}_{n-1}}{a_k}$（$n\ge 2$）．证明：对任意正整数 $M$，总有正整数 $N$ 满足 $\displaystyle\sum\limits_{k=1}^Nb_k > M$．
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -68,5 +68,5 @@ nav_order: 202403
 
 设 $n$ 是正整数，函数 $f(x)=(x-x_1)(x-x_2)\cdots (x-x_n)$，其中 $x_i\in[-1,1]$ ，$i=1,\cdots,n$．
 
-证明：对任意 $a\in(-1,0)$，$b\in(0,1)$，总有 $\min\{|f(a)|,|f(b)|\} < 1$．
+证明：对任意 $a\in(-1,0)$，$b\in(0,1)$，总有 $\min\lbrace\vert f(a)\vert,\vert f(b)\vert\rbrace < 1$．
 
