--- a/docs/ExerciseHidden/Entering/2024Math.md
+++ b/docs/ExerciseHidden/Entering/2024Math.md
@@ -26,7 +26,7 @@ nav_order: 202401
 
 （ⅲ）若集合 $\mathbb{P}$ 满足（ⅰ）（ⅱ），则 $\mathbb{F}\subset \mathbb{P}$．
 
-（1）证明：$\mathbb{F}=\{a+b\sqrt[3]{2}+c\sqrt[3]{4} | a,b,c\in\mathbb{Q}\}$；
+（1）证明：$\mathbb{F}=\lbrace a+b\sqrt[3]{2}+c\sqrt[3]{4} \vert  a,b,c\in\mathbb{Q}\rbrace$；
 
 （2）证明：对任意 $\alpha\in \mathbb{F}$，都存在一个不多于 3 次的有理系数多项式 $f(x)$，使得 $f(\alpha)=0$．
 
@@ -54,7 +54,7 @@ nav_order: 202401
 
 设 $n$ 是正整数．证明如下不等式：
 
-（1）$\Big|\sin\Big(\sum\limits_{k=1}^nx_k\Big)\Big| \le \sum\limits_{k=1}^n\sin x_k$，其中 $x_k\in[0,\pi]$，$k=1,\cdots,n$；
+（1）$\Big\vert \sin\Big(\sum\limits_{k=1}^nx_k\Big)\Big\vert  \le \sum\limits_{k=1}^n\sin x_k$，其中 $x_k\in[0,\pi]$，$k=1,\cdots,n$；
 
 （2）$\sqrt{n} \le \sqrt[n]{n!} \le \dfrac{n+1}{2}$．
 
@@ -62,10 +62,10 @@ nav_order: 202401
 
 ## 四、（30分） 
 
-已知 $\sigma$ 是 $\{1,2,\cdots,n\}$ 上的一个既单又满的映射（即 $(\sigma(1),\sigma(2),\cdots,\sigma(n))$ 是 $(1,2,\cdots,n)$ 的一个全排列），把映射 $\sigma$ 叫做集合 $\{1,2,\cdots,n\}$ 上的一个 **$n$ 元置换**．把所有的 $n$ 元置换形成的集合记为 $S_n$．
+已知 $\sigma$ 是 $\lbrace 1,2,\cdots,n\rbrace$ 上的一个既单又满的映射（即 $(\sigma(1),\sigma(2),\cdots,\sigma(n))$ 是 $(1,2,\cdots,n)$ 的一个全排列），把映射 $\sigma$ 叫做集合 $\lbrace 1,2,\cdots,n\rbrace$ 上的一个 **$n$ 元置换**．把所有的 $n$ 元置换形成的集合记为 $S_n$．
 
 设 $b_{i,j}$ 为一组数，其中 $i,j=1,\cdots,n$．
 
 （1）对于任意属于 $S_n$ 的置换 $\sigma$，若存在一组实数 $\lambda_i$，$i=1,2,\cdots,n$，使得对任意 $i,j=1,2,\cdots,n$，都有 $b_{i,j}\ge \lambda_i-\lambda_j$，求证：$\displaystyle\sum\limits_{i=1}^nb_{i,\sigma(i)}\ge 0$．
 
-（2）若 $b_{i,i}=0$，$i=1,2,\cdots,n$，且对任意属于 $S_n$ 的置换 $\sigma$，均有 $\displaystyle\sum\limits_{i=1}^nb_{i,\sigma(i)}\ge 0$．当 $n=2,3$ 时，求证：存在一组实数 $\lambda_i$，$i=1,2,\cdots,n$，使得对任意 $i,j\in\{1,2,\cdots,n\}$，都有 $b_{i,j}\ge\lambda_i-\lambda_j$．
+（2）若 $b_{i,i}=0$，$i=1,2,\cdots,n$，且对任意属于 $S_n$ 的置换 $\sigma$，均有 $\displaystyle\sum\limits_{i=1}^nb_{i,\sigma(i)}\ge 0$．当 $n=2,3$ 时，求证：存在一组实数 $\lambda_i$，$i=1,2,\cdots,n$，使得对任意 $i,j\in\lbrace 1,2,\cdots,n\rbrace$，都有 $b_{i,j}\ge\lambda_i-\lambda_j$．
