--- a/docs/ExerciseHidden/Entering/2024KYM.md
+++ b/docs/ExerciseHidden/Entering/2024KYM.md
@@ -60,7 +60,11 @@ nav_order: 202403
 
 （1）证明：$a_n\ne 0$（$n\in\mathbf{N}^*$），并求 $\lbrace a_n\rbrace$ 的通项公式；
 
-（2）定义数列 $\lbrace b_n\rbrace$ 如下：$b_1=1$，$b_n=\sum\limits_{k=1}^n(-1)^{k-1}\dfrac{\mathrm{C}^{k-1}_{n-1}}{a_k}$（$n\ge 2$）．证明：对任意正整数 $M$，总有正整数 $N$ 满足 $\displaystyle\sum\limits_{k=1}^Nb_k > M$．
+（2）定义数列 $\lbrace b_n\rbrace$ 如下：$b_1=1$，且
+
+$$\displaystyle b_n=\sum\limits_{k=1}^n(-1)^{k-1}\dfrac{\mathrm{C}^{k-1}_{n-1}}{a_k} \qquad (n\ge 2).$$
+
+证明：对任意正整数 $M$，总有正整数 $N$ 满足 $\displaystyle\sum\limits_{k=1}^Nb_k > M$．
 
 <div STYLE="page-break-after: always;"></div>
 
